refactor: polish serialized source snapshot contracts
Co-authored-by: AntonLem <2189039+AntonLem@users.noreply.github.com>