@@ -1,6 +1,7 @@
 package io.github.lemon_ant.jharmonizer.core.translator;
 
 import io.github.lemon_ant.jharmonizer.core.optout.SourceCharacterRange;
+import java.util.Collections;
 import java.util.List;
 import lombok.NonNull;
 import lombok.Value;
@@ -8,14 +9,14 @@ import lombok.Value;
 @Value
 public class SerializedSourceSnapshot {
     @NonNull
-    List<SourceCharacterRange> formattingExclusionRanges;
+    List<@NonNull SourceCharacterRange> formattingExclusionRanges;
 
     @NonNull
     String sourceCode;
 
     public SerializedSourceSnapshot(
-            @NonNull String sourceCode, @NonNull List<SourceCharacterRange> formattingExclusionRanges) {
+            @NonNull String sourceCode, @NonNull List<@NonNull SourceCharacterRange> formattingExclusionRanges) {
         this.sourceCode = sourceCode;
-        this.formattingExclusionRanges = List.copyOf(formattingExclusionRanges);
+        this.formattingExclusionRanges = Collections.unmodifiableList(formattingExclusionRanges);
     }
 }
